docs(routes): Documentação finalizada
